--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 12.03.2025 08:32:56 | Praha: 6°C, Převážně jasno</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 12.03.2025 09:03:52 | Praha: 7°C, Zataženo</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -33,13 +33,7 @@
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
-Volba Sládků<br>
-Kozel tmavý<br>
-Cider Kingswood<br>
-<br>
-Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
 </td>
 </tr>
 </table>
@@ -118,7 +112,7 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <section id="Rybarna"></section><a href="#top">&#x1F51D;</a><tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickem makrely se salsou z cervene cibule {salsa criolla}, libanonsky jahlovy salat s rajcaty, citronem a petrzelkou 175</li><li>Peceny filet z cerstveho candata se salsou z cervene cibule {salsa criolla} libanonsky jahlovy salat s rajcaty, citronem a petrzelkou 210</li><li>Pomalu pecene thajske veprove v lehce pikantni arasidove omacce s pecenymi paprikami, koriandrem a zelenou cibulkou, jasminova ryze, salatek 175</li><li>Doruzova pecena kachni prsicka s hribkovou omackou, gratinovane brambory, salatek z cervene repy {L}  210</li><li>Brokolicove sabzi s rajcaty a garam masala, frijoles refritos {mexicke stouchane fazole, sazene vejce 175</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou, zelenymi bylinkami a klicky 175</li><li>Opekane kalamary a olihne se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou, zelenymi bylinkami a klicky 210</li><li>Hovezi o burgundsku {Boeuf bourgignon} na merlotu a korenove zelenine se zampiony, bouquet garni a uzenou slaninou, jasminova ryze 175</li><li>Opekane jehneci s korenim baharat, cizrnovy hummus, chlebove placky, salatek {L} 210</li><li>Marocka cizrnova tazine s pecenou dyni, rajcaty, zeleninou a balkanskym syrem, kuskus, salatek {L} 175</li></ol>
 </td>
 </tr>
 </table>
