--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 14.04.2025 11:03:46 | Praha: 17°C, Zataženo</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 14.04.2025 11:35:28 | Praha: 18°C, Zataženo</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -256,12 +256,12 @@ None
 <span class="tribe-event-date-start">17 dubna</span> </time>
 </div>
 <h3 class="tribe-events-calendar-list__event-title tribe-common-h6 tribe-common-h4--min-medium">
-<a class="tribe-events-calendar-list__event-title-link tribe-common-anchor-thin" href="https://restauracezaskolou.cz/event/ctvrtek-17-4-velikonocni-prazdniny/" rel="bookmark" title="Čtvrtek 17.4. Velikonoční prázdniny">
-		Čtvrtek 17.4. Velikonoční prázdniny	</a>
+<a class="tribe-events-calendar-list__event-title-link tribe-common-anchor-thin" href="https://restauracezaskolou.cz/event/ctvrtek-17-4-velikonocni-prazdniny/" rel="bookmark" title="Čtvrtek 17.4.">
+		Čtvrtek 17.4.	</a>
 </h3>
 </header>
 <div class="tribe-events-calendar-list__event-description tribe-common-b2 tribe-common-a11y-hidden">
-<p>Čtvrtek 17.4. Velikonoční prázdniny</p>
+<p>Čtvrtek 17.4. Polévka: Gulášova (obs.alergeny: 1,7,9) Vepřová pečeně s pepřovou omáčkou, rýže (obs.alergeny: 1,7) Pečené kuřecí stehno, vařené brambory (obs.alergeny: 1,7) Bramborový guláš s houbami, chléb ( obsahuje:1,7) Medailonky z panenky se sýrovou omáčkou, krokety (obs.alergeny: 1,7)</p>
 </div>
 </div>
 </article>
